--- a/templates/index.html
+++ b/templates/index.html
@@ -373,15 +373,12 @@
     }
 
     /*
-     * Position widget so face is centered in the circle
-     * Widget renders at ~400x400, we offset to show just the face area
+     * Let Simli widget fill the container naturally
      */
     #simliWidgetContainer simli-widget {
       display: block;
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
+      width: 100%;
+      height: 100%;
       z-index: 1; /* Base layer for Simli */
     }
 
