--- a/templates/index.html
+++ b/templates/index.html
@@ -319,24 +319,10 @@
     }
 
     /*
-     * Circular container for Simli widget - matches idle video size
+     * Just let Simli widget render - no fancy container
      */
     #simliWidgetContainer {
-      width: 200px;
-      height: 200px;
-      border-radius: 50%;
-      overflow: hidden;
-      border: 2px solid var(--pencil);
-      background: var(--cream);
-      display: flex;
-      align-items: center;
-      justify-content: center;
-    }
-
-    /* Scale down Simli widget to fit in circle */
-    #simliWidgetContainer simli-widget {
-      transform: scale(0.5);
-      transform-origin: center center;
+      max-width: 250px;
     }
 
     /* Breathing animation behind avatar - only when no video playing */
